kustomize/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant
          ports:
            - name: http
              containerPort: 8123
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: configmap
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: configmap
          configMap:
            name: home-assistant
