kustomize/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: home-assistant
