kustomize/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: home.chijun.website
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "*.chijun.website"
      secretName: wildcard-chijun-website
